Moved options for sending email to new and updated mailboxes from the Module Config page to the form for editing the actual messages.
Added the list-simple-aliases.pl and create-simple-alias.pl programs for easy alias management from the command line.
Fixed bugs related to renaming autoresponder files when renaming a domain.
Added the Less Antique content style.
Added preview images for content styles, visible via the Preview.. link next to the style menu.
Domain owners who cannot login via SSH are automatically added to the deniedssh group, which the SSH server is configured to deny even before checking their shell.
The spam and virus filtering features are now enabled by default for new virtual servers.
---- Changes since 3.38 ----
Improved the layout of the Disk Usage page, using tabs.
Added the --template option to modify-domain.pl.
Added a column to the list of installed scripts to show if it is the latest version or not.
Added a star rating system (out of 5) for script installers. Users can rate installed scripts, and ratings for those available are collated based on submissions from Virtualmin Pro users and displayed in the list of scripts available.
Validation of MySQL and PostgreSQL features now check that the database user exists too.
Added plaintext password to list-users.pl output.
Added the resend-email.pl command-line script for re-sending a domain's signup email.
Added Module Config options for a hosting provider logo.
Updated the Wordpress script installer to version 2.1.3, and Gallery to 2.2.1.
Fixed bugs that prevent owner limits from being mass-updated, and caused bandwidth limits to be un-necessarily changed.
Re-factored all code for displaying quota fields, so that the text box is greyed out when 'Unlimited' is selected.
Fixed the cPanel migration code to handle new Maildir++ format mailboxes.
Added Prev/Next buttons to template form, for easily navigating through sections.